force-app/main/default/objects/CCRM_UNICA_To_Lead_Mapping__mdt/CCRM_UNICA_To_Lead_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>CCRM UNICA To Lead Mapping</label>
    <pluralLabel>CCRM UNICA To Lead Mappings</pluralLabel>
</CustomObject>