force-app/main/default/objects/CCRM_UNICA_To_Lead_Mapping__mdt/fields/Account_or_Contact_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_or_Contact_Field_API_Name__c</fullName>
    <description>Account or Contact Field API Name</description>
    <label>Account or Contact Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>