force-app/main/default/objects/CCRM_UNICA_To_Lead_Mapping__mdt/fields/Lead_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Types__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>This field is used to hold the semicolon separated lead record type API name</description>
    <label>Lead Record Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>